--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.0",
+    "file-loader": "^0.11.1",
+    "loader-utils": "^1.1.0",
+    "mime": "^1.3.4",
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
     "webpack-dev-server": "^2.4.2"
   }
 }
