--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "vimeo": "^1.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
