--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
-    "webpack-dev-server": "^2.4.2"
+    "webpack-dev-server": "^2.4.2",
+    "webpack-node-externals": "^1.5.4"
   }
 }
