--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^15.5.4",
     "react-anime": "^0.3.4",
     "react-dom": "^15.5.4",
+    "react-lazy-cache": "^3.0.1",
     "react-player": "^0.16.0",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
